format record fields vertically and update mapper tests for immutable fields